--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ button:active {
 }
 .container.right-panel-active .overlay-left {
   transform: translateX(0);
+  z-index: 0;
 }
 
 .container.right-panel-active .overlay-right {
