Frontend: Styling the error message

--- a/src/index.css
+++ b/src/index.css
@@ -188,3 +188,11 @@ button:disabled{
   color: red;
   margin-left: 0.25rem;
 }
+
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
