--- a/src/index.css
+++ b/src/index.css
@@ -28,16 +28,14 @@ body {
   top: 0;
   left: 0;
   height: 100%;
-  transition: all 0.6% ease-in-out;
+  /* transition: all 0.6% ease-in-out; */
 }
 .SignUp {
   width: 50%;
   opacity: 0;
-  z-index: 1;
 }
 .Login {
   width: 50%;
-  z-index: 2;
 }
 form {
   background-color: #fff;
@@ -90,14 +88,7 @@ button:disabled{
   background-color: transparent;
   border: 2px solid #fff;
 }
-.container.right-panel-active .Login {
-  transform: translateX(100%);
-}
-.container.right-panel-active .SignUp {
-  transform: translateX(100%);
-  opacity: 1;
-  z-index: 5;
-}
+
 .overlayContainer {
   position: absolute;
   top: 0;
@@ -106,11 +97,9 @@ button:disabled{
   height: 100%;
   overflow: hidden;
   transition: transform 0.6s ease-in-out;
-  z-index: 100;
+
 }
-.container.right-panel-active .overlayContainer {
-  transform: translateX(-100%);
-}
+
 .overlay {
   position: relative;
   color: #fff;
@@ -146,14 +135,7 @@ button:disabled{
   right: 0;
   transform: translateX(0);
 }
-.container.right-panel-active .overlay-left {
-  transform: translateX(0);
-  z-index: 0;
-}
 
-.container.right-panel-active .overlay-right {
-  transform: translateX(20%);
-}
 
 
 .instructions {
