--- a/src/index.css
+++ b/src/index.css
@@ -21,22 +21,15 @@ body {
   overflow: hidden;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 25), 0 10px 10px rgba(0, 0, 0, 25);
 }
-.Login,
-.SignUp {
+.Login {
   position: absolute;
   text-align: center;
   top: 0;
   left: 0;
   height: 100%;
-  /* transition: all 0.6% ease-in-out; */
-}
-.SignUp {
-  width: 50%;
-  opacity: 0;
-}
-.Login {
   width: 50%;
 }
+
 form {
   background-color: #fff;
   display: flex;
@@ -83,8 +76,7 @@ button:disabled{
   background-color: grey;
   border: 1px solid grey;
 }
-.overlayer-Login,
-.overlayer-SignUp {
+.overlayer-Login {
   background-color: transparent;
   border: 2px solid #fff;
 }
@@ -96,8 +88,6 @@ button:disabled{
   width: 50%;
   height: 100%;
   overflow: hidden;
-  transition: transform 0.6s ease-in-out;
-
 }
 
 .overlay {
@@ -107,13 +97,7 @@ button:disabled{
   height: 100%;
   width: 200%;
   background: linear-gradient(to right, #ff4b2b, #ff228c);
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
 }
-.container.right-panel-active .overlay {
-  transform: translateX(50%);
-}
-.overlay-left,
 .overlay-right {
   position: absolute;
   display: flex;
@@ -125,18 +109,8 @@ button:disabled{
   top: 0;
   height: 100%;
   width: 50%;
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
-}
-.overlay-left {
-  transform: translateX(-20%);
-}
-.overlay-right {
   right: 0;
-  transform: translateX(0);
 }
-
-
 
 .instructions {
   font-size: 0.75rem;
