--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body {
+.body {
   align-items: center;
   display: flex;
   justify-content: center;
