--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,6 +3,9 @@ li {
 }
 
 .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   line-height: 10vh;
   height: 10vh;
   box-shadow: rgba(50, 50, 93, 0.23) 0 30px 30px -20px;
@@ -17,13 +20,6 @@ li {
   justify-content: flex-end;
   width: 75%;
 }
-.navContainer {
-  max-width: 90%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 .nav-links li {
   color: black;
   font-size: 20px;
@@ -32,4 +28,48 @@ li {
   cursor: pointer;
   text-transform: capitalize;
   text-decoration: none;
+}
+.mobile-menu-icon {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  /* .logo{
+        display: flex;
+        position: absolute;
+        top: 15px;
+        left: 35px;
+    } */
+  .nav-links {
+    display: none;
+  }
+  .nav-links-mobile {
+    z-index: 100;
+    position: absolute;
+    display: block;
+    list-style: none;
+    box-shadow: rgba(50, 50, 93, 0.23) 0 30px 30px -20px;
+    right: 0;
+    top: 10%;
+    transition: all 0.5s ease-in-out;
+    width: 20%;
+    background-color: white;
+  }
+  ul li {
+    padding: 32px;
+    width: 100%;
+    transition: all 0.5s ease-in-out;
+    text-align: end;
+  }
+  .mobile-menu-icon {
+    position: absolute;
+    display: block;
+    right: 20px;
+  }
+  .menu {
+    width: 20px;
+    height: 20px;
+    color: black;
+    font-weight: bolder;
+  }
 }
