Frontend: Customizing register

--- a/src/styles/authForms.css
+++ b/src/styles/authForms.css
@@ -149,3 +149,10 @@
     padding: 0.5rem;
     margin-bottom: 0.5rem;
   }
+  .successmsg {
+    background-color: lightgreen;
+    color: green;
+    font-weight: bold;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
