--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -85,7 +85,7 @@
   margin-bottom: 10px;
 }
 
-.container {
+.table-container {
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
@@ -132,14 +132,14 @@ small {
   flex-basis: 25%;
 }
 
-@media all and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .table-header {
-    display: none;
+    display: none !important;
   }
-
-  li {
+  .responsive-table li {
     display: block;
   }
+
   .col {
     flex-basis: 100%;
   }
