--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,7 +9,9 @@
     border: 1px solid #333;
     box-shadow: 0px 0px 15px gray;
   }
-  
+  h2{
+    font-size: 26px;
+  }
   .Home {
     width: 100%;
     flex-grow: 1;
