--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -70,15 +70,12 @@
   border-right: none;
 }
 
-.icon {
-  font-size: 20px;
-}
-.icon.delete {
+/* .icon.delete {
   color: red;
 }
 .icon.edit {
   color: green;
-}
+} */
 .createCat {
   font-size: 20px;
   color: blue;
@@ -116,6 +113,7 @@ small {
   letter-spacing: 0.03em;
 }
 .responsive-table .table-row {
+  align-items: center;
   background-color: #ffffff;
   box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
 }
